<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/normal_menu"
        android:title="@string/normal_card"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/hybrid_menu"
        android:title="@string/hybrid_card"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/satellite_menu"
        android:title="@string/satellite_card"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/terrain_menu"
        android:title="@string/terrain_card"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout_menu"
        android:title="Logout"
        app:showAsAction="never"
        android:orderInCategory="5"/>
</menu>